[feature] Add include_full_file option to QueryParam and enhance context building
Enhance the LightRAG system by adding an option to include full file content in query results:
- Add include_full_file boolean flag to QueryParam class
- Modify kg_query function to handle the new option
- Implement _get_summaries_from_query function for better code organization
- Update _build_query_context to include full file content when requested
- Add voyageai_rerank function for potential future use
- Update requirements.txt to include voyageai library

Notes: The changes aim to provide more comprehensive context for queries when needed, allowing users to access full file content in addition to summaries and chunks. The addition of voyageai_rerank suggests potential plans for implementing reranking functionality in the future.

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pyvis
 qdrant-client
 supabase
 tenacity
+thefuzz
 # lmdeploy[all]
 
 # LLM packages
@@ -29,4 +30,4 @@ transformers
 tree-sitter==0.21.3
 tree_sitter_languages==1.10.2
 xxhash
-thefuzz
+voyageai
