[feature] Update AST-grep rules and improve skeleton generation
This commit significantly updates the AST-grep rules for multiple languages
and enhances the skeleton generation functionality. Key changes include:

- Refine and expand AST-grep rules for C++, Go, Java, JavaScript, Rust,
  TypeScript, and TSX
- Add support for JSX and TSX file parsing
- Improve language detection and rule application in generate_skeleton function
- Update test cases to cover new language support and rule changes
- Rename 'golang.yml' to 'go.yml' for consistency

These changes aim to provide more accurate and comprehensive code structure
analysis across various programming languages, enhancing the overall
functionality of the repository structure generation tool.

User notes: ast-grep

--- a/lightrag/palmier/ast_grep/rules/cpp.yml
+++ b/lightrag/palmier/ast_grep/rules/cpp.yml
@@ -1,7 +1,7 @@
 id: class
 language: cpp
 rule:
-  kind: identifier
+  kind: type_identifier
   pattern: $NAME
   inside:
     kind: class_specifier
@@ -19,11 +19,15 @@ rule:
 id: function
 language: cpp
 rule:
-  kind: identifier
+  any:
+    - kind: identifier
+    - kind: field_identifier
   pattern: $NAME
   inside:
-    kind: function_definition
-    pattern: $CONTEXT
+    kind: function_declarator
+    inside:
+      kind: function_definition
+      pattern: $CONTEXT
 ---
 id: method
 language: cpp
@@ -39,37 +43,29 @@ rule:
 id: include
 language: cpp
 rule:
-  kind: string_literal
+  kind: preproc_include
   pattern: $NAME
-  inside:
-    kind: preproc_include
-    pattern: $CONTEXT
 ---
 id: namespace
 language: cpp
 rule:
-  kind: identifier
+  kind: namespace_identifier
   pattern: $NAME
   inside:
     kind: namespace_definition
     pattern: $CONTEXT
 ---
-id: variable
+id: enum
 language: cpp
 rule:
-  kind: identifier
+  kind: type_identifier
   pattern: $NAME
   inside:
-    kind: declaration
+    kind: enum_specifier
     pattern: $CONTEXT
 ---
-id: class_variable
+id: comment
 language: cpp
 rule:
-  kind: identifier
-  pattern: $NAME
-  inside:
-    kind: field_declaration
-    pattern: $CONTEXT
-    parent:
-      kind: class_specifier 
+  kind: comment
+  pattern: $CONTENT
