[feature] Update AST-grep rules and add test exit point
Update AST-grep rules in python.yml to simplify and improve code structure detection:
- Simplify class and function detection rules
- Consolidate import detection rules
- Add new rules for decorators and enum assignments

Add a temporary exit point in LightRAG class for testing purposes:
- Insert logger.info and return statement after file processing

Notes: The changes to the AST-grep rules appear to be aimed at improving the efficiency and accuracy of code structure detection. The temporary exit point added to the LightRAG class suggests ongoing development or debugging efforts, allowing for easier testing of the file processing stage.

--- a/lightrag/palmier/ast_grep/rules/python.yml
+++ b/lightrag/palmier/ast_grep/rules/python.yml
@@ -1,29 +1,14 @@
 id: class
 language: python
 rule:
-  kind: identifier
-  pattern: $NAME
-  inside:
-    kind: class_definition
-    pattern: $CONTEXT
+  kind: class_definition
+  pattern: $CLASSDEF
 ---
 id: function
 language: python
 rule:
-  kind: identifier
-  pattern: $NAME
-  any:
-  - inside:
-      kind: function_definition
-      inside:
-        kind: decorated_definition
-        pattern: $CONTEXT
-  - inside:
-      kind: function_definition
-      pattern: $CONTEXT
-      not:
-        inside:
-          kind: decorated_definition
+  kind: function_definition
+  pattern: $CONTEXT
 ---
 id: import
 language: python
@@ -32,27 +17,18 @@ rule:
     - kind: dotted_name
       pattern: $NAME
       inside:
-        any:
-          - kind: import_statement
-            pattern: $CONTEXT
-          - kind: import_from_statement
-            pattern: $CONTEXT
+        kind: import_from_statement
+        pattern: $CONTEXT
     - kind: aliased_import
       pattern: $NAME
       inside:
-        any:
-          - kind: import_statement
-            pattern: $CONTEXT
-          - kind: import_from_statement
-            pattern: $CONTEXT
+        kind: import_from_statement
+        pattern: $CONTEXT
     - kind: relative_import
       pattern: $NAME
       inside:
-        any:
-          - kind: import_statement
-            pattern: $CONTEXT
-          - kind: import_from_statement
-            pattern: $CONTEXT
+        kind: import_from_statement
+        pattern: $CONTEXT
     - kind: identifier
       pattern: $NAME
       inside:
@@ -67,3 +43,19 @@ rule:
   inside:
     kind: expression_statement
     pattern: $CONTEXT
+---
+id: decorator
+language: python
+rule:
+  kind: decorator
+  pattern: $DECORATOR
+  inside:
+    kind: decorated_definition
+    pattern: $CONTEXT
+---
+id: enum_assignment
+language: python
+rule:
+  kind: assignment
+  inside:
+    kind: class_definition
