[refactor] Replace ast-grep CLI with Python API
Replace the ast-grep CLI dependency with the ast-grep-py Python API for improved performance and integration. This change includes:

- Remove the \`check_dependencies()\` function from \`__init__.py\`
- Create a new \`AstGrepClient\` class in \`ast_grep/client.py\` to handle ast-grep operations
- Update \`repo_structure.py\` to use the new \`AstGrepClient\` instead of CLI commands
- Modify \`requirements.txt\` to include \`ast-grep-py\` and \`PyYAML\`
- Update tests to remove CLI dependency checks and add tests for non-code files
- Adjust the Python rules in \`ast_grep/rules/python.yml\`

This refactoring eliminates the need for a separate CLI installation, simplifies the codebase, and provides a more robust and maintainable solution for AST analysis.

--- a/lightrag/palmier/ast_grep/rules/python.yml
+++ b/lightrag/palmier/ast_grep/rules/python.yml
@@ -35,7 +35,7 @@ rule:
         kind: import_from_statement
         pattern: $CONTEXT
 ---
-id: docstring
+id: comment
 language: python
 rule:
   kind: string
